--- a/birds.html
+++ b/birds.html
@@ -15,4 +15,30 @@
 </head>
 <body>
 
+    <h3>Birds by pavan kalyan  bakkani</h3>
 
+    
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-2">B</div>
+            <div class="col-sm-2">A</div>
+            <div class="col-sm-2">K</div>
+            <div class="col-sm-2">A</div>
+            <div class="col-sm-2">N</div>
+            <div class="col-sm-2">I</div>
+        </div>
+
+        <div class="row">
+            <div class="col-md">Black swift</div>
+            <div class="col-md">Abbott's babbler</div>
+            <div class="col-md">Kofiau Paradise Kingfisher </div>
+            <div class="col-md">Abert's towhee</div>
+            <div class="col-md">Nightingale</div>
+            <div class="col-md">Abdim's stork</div>
+        </div>
+
+
+
+
+</body>
+</html>
