--- a/birds.html
+++ b/birds.html
@@ -36,9 +36,9 @@
             <div class="col-md">Nightingale</div>
             <div class="col-md">Abdim's stork</div>
         </div>
-
-
-
+       <div>
+        While reducing the size, the rows with animals names breaks at 764*67 px. The rows with animals start letter breaks at 577*33 px.
+       </div>
 
 </body>
 </html>
