--- a/birds.html
+++ b/birds.html
@@ -34,7 +34,7 @@
             <div class="col-md">Kofiau Paradise Kingfisher </div>
             <div class="col-md">Abert's towhee</div>
             <div class="col-md">Nightingale</div>
-            <div class="col-md">Abdim's stork</div>
+            <div class="col-md">Iago Sparrow</div>
         </div>
        <div>
         While reducing the size, the rows with Birds names breaks at 764*67 px. The rows with Birds start letter breaks at 577*33 px.
