--- a/birds.html
+++ b/birds.html
@@ -40,5 +40,26 @@
         While reducing the size, the rows with Birds names breaks at 764*67 px. The rows with Birds start letter breaks at 577*33 px.
        </div>
 
+
+       <div class="container">
+         <img src="Black-Swift.jpg" class="image-fluid"  width="250px" height="200px">
+         <img src="Abbott's babbler.jpg"  class="image-fluid" width="250px"   height="200px">
+         <img src="Kofiau Paradise Kingfisher.jpg" class="image-fluid"  width="250px"  height="150px">
+       </div> <br>
+      <div class="container">
+        <img src="Black-Swift.jpg" class="img-thumbnails" width="250px" height="200px">
+        <img src ="Abbott's babbler.jpg" class="img-thumbnails" width="250px" height="200px">
+        <img src="Kofiau Paradise Kingfisher.jpg" class="img-thumbnails" width="250px" height="150px">
+      </div>
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
