--- a/birds.html
+++ b/birds.html
@@ -39,7 +39,7 @@
        <div>
         While reducing the size, the rows with Birds names breaks at 764*67 px. The rows with Birds start letter breaks at 577*33 px.
        </div>
-
+        <br>
 
        <div class="container">
          <img src="Black-Swift.jpg" class="image-fluid"  width="250px" height="200px">
@@ -50,8 +50,70 @@
         <img src="Black-Swift.jpg" class="img-thumbnails" width="250px" height="200px">
         <img src ="Abbott's babbler.jpg" class="img-thumbnails" width="250px" height="200px">
         <img src="Kofiau Paradise Kingfisher.jpg" class="img-thumbnails" width="250px" height="150px">
-      </div>
+      </div><br>
 
+    
+<table class="table table-striped table-bordered"  style="color:black;  width:50%; text-align:center; margin-left: auto; margin-right: auto;">
+<caption style="font-size: 20px; color:teal;"> This Table consists of 4 columns. It consists of elements Bird, Lake, and Athlete starting with the letters of my Last Name.</caption>
+
+
+        <thead>
+         <tr>      
+                  <th scope="col">Letter</th>
+                  <th scope="col">Bird</th>
+                  <th scope="col">Lake</th>
+                  <th scope="col">Athlete</th>
+                </tr>
+        </thead>
+        
+        <tbody>
+
+       <tr>
+        <td scope="row">B</td>
+        <td scope="row">Black swift</td>
+        <td scope="row">Baikal	</td>
+        <td scope="row">Bumrah</td>
+       </tr>
+
+
+
+
+       <tr>
+        <td scope="row">A</td>
+        <td scope="row">Abbott's babbler</td>
+        <td scope="row">Abashiri</td>
+        <td scope="row">Anderson</td>
+       </tr>
+
+       <tr>
+       <td scope="row">K</td>
+        <td scope="row">Kofiau Paradise Kingfisher</td>
+        <td scope="row">Kaveri</td>
+        <td scope="row">King Kohli</td>
+      </tr>
+
+      <tr>
+        <td scope="row">A</td>
+        <td scope="row">Abert's towhee</td>
+        <td scope="row">Aby</td>
+        <td scope="row">AB devilliers</td>
+      </tr>
+
+      <tr>
+        <td scope="row">N</td>
+        <td scope="row">Nightingale</td>
+        <td scope="row">Nile</td>
+        <td scope="row">Nathan ashtle</td>
+      </tr>
+
+       <tr>
+        <td scope="row">I</td>
+        <td scope="row">Iago Sparrow</td>
+        <td scope="row">Inari</td>
+        <td scope="row">Ishaan kishan</td>
+        </tr>
+       </tbody>
+      </table><br>
 
 
 
