--- a/birds.html
+++ b/birds.html
@@ -58,17 +58,17 @@
 
 
         <thead>
-         <tr>      
+         <tr class="table-info">      
                   <th scope="col">Letter</th>
                   <th scope="col">Bird</th>
                   <th scope="col">Lake</th>
                   <th scope="col">Athlete</th>
                 </tr>
         </thead>
-        
+
         <tbody>
 
-       <tr>
+       <tr class="table-light">
         <td scope="row">B</td>
         <td scope="row">Black swift</td>
         <td scope="row">Baikal	</td>
@@ -76,37 +76,35 @@
        </tr>
 
 
-
-
-       <tr>
+       <tr class="table-primary">
         <td scope="row">A</td>
         <td scope="row">Abbott's babbler</td>
         <td scope="row">Abashiri</td>
         <td scope="row">Anderson</td>
        </tr>
 
-       <tr>
+       <tr class="table-secondary">
        <td scope="row">K</td>
         <td scope="row">Kofiau Paradise Kingfisher</td>
         <td scope="row">Kaveri</td>
         <td scope="row">King Kohli</td>
       </tr>
 
-      <tr>
+      <tr class="table-success">
         <td scope="row">A</td>
         <td scope="row">Abert's towhee</td>
         <td scope="row">Aby</td>
         <td scope="row">AB devilliers</td>
       </tr>
 
-      <tr>
+      <tr class="table-danger">
         <td scope="row">N</td>
         <td scope="row">Nightingale</td>
         <td scope="row">Nile</td>
         <td scope="row">Nathan ashtle</td>
       </tr>
 
-       <tr>
+       <tr class="table-dark">
         <td scope="row">I</td>
         <td scope="row">Iago Sparrow</td>
         <td scope="row">Inari</td>
@@ -114,6 +112,22 @@
         </tr>
        </tbody>
       </table><br>
+
+
+      <div class="btn-toolbar" role="toolbar" aria-label="Button Groups">
+        <div class="btn-group mb-2" role="group" aria-label="First Button">
+            <button type="button" class="btn btn-success">B</button>
+            <button type="button" class="btn btn-success">A</button>
+            <button type="button" class="btn btn-success">K</button>
+        </div>
+        <div class="btn-group mb-2" role="group" aria-label="Second Button">
+            <button type="button" class="btn btn-warning">A</button>
+            <button type="button" class="btn btn-warning">N</button>
+        </div>
+        <div class="btn-group mb-2" role="group" aria-label="Third Button">
+            <button type="button" class="btn btn-danger">I</button>
+        </div>
+     </div>
 
 
 
