--- a/birds.html
+++ b/birds.html
@@ -114,20 +114,38 @@
       </table><br>
 
 
+
+
+      <lable>BUTTONS:</lable>
+     <br>
+       <button class="btn">B</button>
+       <button class="btn">A</button>
+       <button class="btn">K</button>
+       <button class="btn">A</button>
+       <button class="btn">N</button>
+       <button class="btn">I</button>
+       <br>
+
+
+
+
       <div class="btn-toolbar" role="toolbar" aria-label="Button Groups">
-        <div class="btn-group mb-2" role="group" aria-label="First Button">
+        <div class="btn-group me-2" role="group" aria-label="First Button">
             <button type="button" class="btn btn-success">B</button>
             <button type="button" class="btn btn-success">A</button>
             <button type="button" class="btn btn-success">K</button>
         </div>
-        <div class="btn-group mb-2" role="group" aria-label="Second Button">
+        <div class="btn-group me-2" role="group" aria-label="Second Button">
             <button type="button" class="btn btn-warning">A</button>
             <button type="button" class="btn btn-warning">N</button>
         </div>
-        <div class="btn-group mb-2" role="group" aria-label="Third Button">
+        <div class="btn-group me-2" role="group" aria-label="Third Button">
             <button type="button" class="btn btn-danger">I</button>
         </div>
      </div>
+     <br>
+
+
 
 
 
