--- a/birds.html
+++ b/birds.html
@@ -145,6 +145,16 @@
      </div>
      <br>
 
+     <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+        Dropdown button
+      </button>
+      <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+        <a class="dropdown-item" href="basic.html">Basic</a>
+        <a class="dropdown-item" href="advanced.html">Advanced</a>
+    </div>
+    </div>
+
 
 
 
