--- a/basic.html
+++ b/basic.html
@@ -11,10 +11,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" 
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 
+    
 </head>
 <body>
 
-
+    <h2>This is Basic html page</h2>
 
 </body>
 </html>
