--- a/birds.html
+++ b/birds.html
@@ -16,7 +16,7 @@
 <body>
 
 
-  <nav class="navbar navbar-expand-md navbar-light bg-warning">
+  <nav class="navbar navbar-expand-md navbar-light bg-light">
     <a class="navbar-brand" href="birds.html">Interesting Birds</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -174,6 +174,25 @@
         <a class="dropdown-item" href="advanced.html">Advanced</a>
     </div>
     </div>
+
+
+
+    <form>
+      <div class="form-group">
+          <label for="exampleInputEmail1" class="form-label">Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+      </div>
+      <div class="form-group">
+          <label for="exampleInputPassword1" class="form-label">Bird</label>
+          <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Enter your Bird">
+      </div>
+      <div class="form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Sign up for newsletter? </label>
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 
 
 
