--- a/birds.html
+++ b/birds.html
@@ -195,8 +195,40 @@
     </form>
 
 
+    <div class="card-group">
+      <div class="card" style="width: 18rem;">
+          <img src="Black-Swift.jpg" class="card-img-top" height="250px" width="250px" alt="Black-Swift">
+          <div class="card-body">
+          <h5 class="card-title">Black-Swiftk</h5>
+          <p class="card-text"> The Black Swift dances high in the sky on sickle-shaped wings, where it feasts on winged ants. On sunny days it flies so high that it's just a speck. This large, black swift nests on dark and inaccessible ledges, often behind waterfalls, but much of the rest of its life is shrouded in mystery.  </p>
+          <a href="https://www.allaboutbirds.org/guide/Black_Swift/overview" class="btn btn-primary">Black-swift details</a>
+          </div>
+      </div>
 
 
+
+
+      <div class="card-group">
+        <div class="card" style="width: 18rem;">
+            <img src="Abbott's babbler.jpg" class="card-img-top" height="250px" width="250px" alt="Abbott's babbler">
+            <div class="card-body">
+            <h5 class="card-title">Abbott's babblerk</h5>
+            <p class="card-text"> Abbott's babbler (Malacocincla abbotti) is a species of bird in the family Pellorneidae. It is widely distributed along the Himalayas in South Asia and extending into the forests of Southeast Asia. They are short-tailed and stout birds which forage in pairs in dense undergrowth close to the ground and their presence is indicated by their distinctive calls. </p>
+            <a href="https://en.wikipedia.org/wiki/Abbott%27s_babbler" class="btn btn-primary">Abbott's babbler details </a>
+            </div>
+        </div>
+
+
+        <div class="card-group">
+          <div class="card" style="width: 18rem;">
+              <img src="Kofiau Paradise Kingfisher.jpg" class="card-img-top" height="250px" width="250px" alt="Kofiau Paradise Kingfisher">
+              <div class="card-body">
+              <h5 class="card-title">Kofiau Paradise Kingfisher</h5>
+              <p class="card-text"> A long-tailed kingfisher of lowland forest on Kofiau Island. Dark blue upperparts with pale blue crown and shoulder, red bill, white underparts, rump and completely white tail, shorter and thicker than similar species. The only paradise-kingfisher on Kofiau Island. Shakes its tail while it vocalizes. Song, a slowly rising trill, ending abruptly. Call, three downward whistles.</p>
+              <a href="https://ebird.org/species/kopkin1" class="btn btn-primary">Kofiau Paradise Kingfisher details </a>
+              </div>
+          </div>
+      
 
 
 
